<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:scaleType="fitEnd"
        android:src="@drawable/spw1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="logo"
                    android:scaleType="fitStart"
                    android:src="@drawable/h1" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/txColor"
                    android:textSize="@dimen/text_size" />

                <Button
                    style="@style/Button"
                    android:onClick="add5forTeamA"
                    android:text="@string/btnPoints5" />

                <Button
                    style="@style/Button"
                    android:onClick="add4forTeamA"
                    android:text="@string/btnPoints4" />

                <Button
                    style="@style/Button"
                    android:onClick="add3forTeamA"
                    android:text="@string/btnPoints3" />

                <Button
                    style="@style/Button"
                    android:onClick="add2forTeamA"
                    android:text="@string/btnPoints2" />

                <Button
                    style="@style/Button"
                    android:onClick="add1forTeamA"
                    android:text="@string/btnPoints1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="logo"
                    android:scaleType="fitStart"
                    android:src="@drawable/h2" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/txColor"
                    android:textSize="@dimen/text_size" />

                <Button
                    style="@style/Button"
                    android:onClick="add5forTeamB"
                    android:text="@string/btnPoints5" />

                <Button
                    style="@style/Button"
                    android:onClick="add4forTeamB"
                    android:text="@string/btnPoints4" />

                <Button
                    style="@style/Button"
                    android:onClick="add3forTeamB"
                    android:text="@string/btnPoints3" />

                <Button
                    style="@style/Button"
                    android:onClick="add2forTeamB"
                    android:text="@string/btnPoints2" />

                <Button
                    style="@style/Button"
                    android:onClick="add1forTeamB"
                    android:text="@string/btnPoints1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                style="@style/Button"
                android:onClick="reset"
                android:text="@string/btnReset" />

            <Button
                style="@style/Button"
                android:layout_marginBottom="0dp"
                android:onClick="undo"
                android:text="@string/btnUndo" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>